# xmahjongg

./: .autotools  .cproject  .project  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  cross_aarch64.txt  meson.build  xmahjongg.desktop
include/lcdf/: inttypes.h  vector.cc  vector.hh
liblcdf/: Makefile.am  Makefile.in  clp.c  gifx.c  meson.build  permstr.cc  string.cc
share/tiles/: gif_double.txt
src/: Makefile.am  Makefile.in  main.cc  meson.build  panel.cc  swgeneral.cc
